<resources>
    <string name="app_name">Frolfr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Disc Golfer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_round">Edit Round</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_toggle_played">Show/Hide Unplayed</string>

    <string name="menu_rounds">Rounds</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_course">Course</string>

    <string name="fragment_user_course_scorecards">Rounds</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">Log out</string>
    <string name="course_tab_overview">Overview</string>
    <string name="course_tab_scorecards">Scorecards</string>
    <string name="course_tab_leaderboard">Leaderboard</string>
    
    <string name="scorecard_strokes">(%d)</string>

    <string name="textStyle_normal">normal</string>
    <string name="textStyle_italic">italic</string>

    <string name="dialog_incomplete_scores">Not all scores have been reported! Continue?</string>
    <string name="action_continue">Continue</string>
    <string name="action_cancel">Cancel</string>
</resources>
