<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rounds"
            android:icon="@drawable/ic_menu_rounds_24"
            android:title="@string/menu_rounds" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_location_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends_24"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile_24"
            android:title="@string/menu_profile" />
    </group>
</menu>
