<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_courses">

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.frolfr.ui.courses.CoursesFragment"
        android:label="@string/menu_courses"
        tools:layout="@layout/fragment_courses" >
        <action
            android:id="@+id/action_nav_courses_to_courseDetailFragment"
            app:destination="@id/courseDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_friends"
        android:name="com.frolfr.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.frolfr.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/courseDetailFragment"
        android:name="com.frolfr.ui.courseDetail.CourseDetailFragment"
        android:label="@string/fragment_course_detail"
        tools:layout="@layout/fragment_course_detail">
        <argument
            android:name="courseId"
            app:argType="integer" />
    </fragment>
</navigation>