<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="courseViewModel"
            type="com.frolfr.ui.course.CourseViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager_course"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_course_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_tab_overview" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_course_scorecards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_tab_scorecards" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_course_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_tab_leaderboard" />
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>
</layout>